# classic-wow-npcs

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
classic_wow_npcs/: __init__.py  config.py
classic_wow_npcs/api/: models.py  npcs.py
tests/: conftest.py  test_classic_wow_npcs.py  test_config.py
tests/functional/: test_npc.py  test_ping.py
tests/unit/: test_config.py
