[tool.poetry]
name = "classic-wow-npcs"
version = "0.1.0"
description = ""
authors = ["Nick <nicholashopewell@trentu.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.1.1"
flask-restx = "0.5.1"
Werkzeug = "2.1.2"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
